# LanShare

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  Lan_Share.exp  Lan_Share.lib  build.ninja  build.ninja.tmp9b62a  cmake_install.cmake  discoverymanager.cpp  discoverymanager.h  filetransfermanager.cpp  filetransfermanager.h  lan_share_qmltyperegistrations.cpp  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtcsettings.cmake
.cmake/api/v1/reply/: cache-v2-fedd1b81d1d85d812245.json  cmakeFiles-v1-eaa756684b63bcb6dd02.json  codemodel-v2-41bf55de167829868fc1.json  index-2026-01-26T21-24-26-0772.json  target-Lan_Share-Debug-66260f050564ec75c510.json  target-Lan_Share_autogen-Debug-30047493c7e3af62654a.json  target-Lan_Share_autogen_timestamp_deps-Debug-a0e99ff69078c07f3713.json  target-Lan_Share_copy_qml-Debug-1b1f14d4d4032eeea473.json  target-Lan_Share_copy_res-Debug-a4478bcb120e57c3dd35.json  target-Lan_Share_qmlimportscan-Debug-f3c792ef6eaf8937f12e.json  (+11 more)
.qtc_clangd/: compile_commands.json
Lan_Share/: Lan_Share_qml_module_dir_map.qrc  main.qml  qmldir
Lan_Share_autogen/: deps  mocs_compilation.cpp
Lan_Share_autogen/EWIEGA46WW/: moc_discoverymanager.cpp.d  moc_discoverymanager.cpp.json  moc_filetransfermanager.cpp.d  moc_filetransfermanager.cpp.json  moc_mainwindow.cpp.d  moc_mainwindow.cpp.json
android/: AndroidManifest.xml  build.gradle  gradle.properties
meta_types/: Lan_Share_json_file_list.txt  Lan_Share_json_file_list.txt.timestamp  qt6lan_share_metatypes.json
qmltypes/: Lan_Share_foreign_types.txt
(+1421 files in other folders)
